FIX: various optimisations on mobile for live pane (#1133)
- uses scrollIntoView instead of custom code
- prevents scrollable list to lag behind rendering by removing relative where possible and using `-webkit-overflow-scrolling: touch;` and ` -webkit-transform: translateZ(0px);` on relative element
- displays loading bar on initial loading
- applies safari white screen fix only on intentional scroll and not when automatically filling pane
- delays onHoverMessage to improve perf when scrolling on desktop
- removes unexpected border radius

--- a/assets/stylesheets/common/chat-message.scss
+++ b/assets/stylesheets/common/chat-message.scss
@@ -174,7 +174,6 @@
   .chat-message-reaction-list,
   .chat-transcript-reactions {
     @include unselectable;
-    position: relative;
     margin-top: 0.25em;
     display: flex;
     flex-wrap: wrap;
